Fixing bug, website not showing tools properly

--- a/style.css
+++ b/style.css
@@ -114,3 +114,27 @@ width: 100%;
     }
     
 }
+
+/*-----JavaScript for Toggle Menu---*/
+.course {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1{
+    font-size: 36px;
+    font-weight: 600;
+    font-weight: 22px;
+    padding: 10px;
+}
+p{
+    color: #777;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+.row {
+    
+}
